--- a/backend/config/.env
+++ b/backend/config/.env
@@ -1,3 +1,6 @@
 PORT = 8000
 
 DB_URL = "mongodb+srv://katlegojdev:729e-shop@cluster0.ggcsumj.mongodb.net/"
+JWT_SECRET_KEY = "ddhfbiuer3cud8hd892bf872lknkaiudh9ddnuild9"
+JWT_EXPIRES = 7d
+ACTIVATION_SECRET = hdjkndawnwe34buidsdasd
