--- a/backend/config/.env
+++ b/backend/config/.env
@@ -4,3 +4,7 @@ DB_URL = "mongodb+srv://katlegojdev:729e-shop@cluster0.ggcsumj.mongodb.net/"
 JWT_SECRET_KEY = "ddhfbiuer3cud8hd892bf872lknkaiudh9ddnuild9"
 JWT_EXPIRES = 7d
 ACTIVATION_SECRET = hdjkndawnwe34buidsdasd
+SMPT_HOST = smtp.gmail.com
+SMPT_PORT = 465
+SMPT_PASSWORD = pcrjygrpzqehcpxb
+SMPT_MAIL= katlegoj.dev@gmail.com
