--- a/backend/config/.env
+++ b/backend/config/.env
@@ -1,7 +1,7 @@
 PORT = 8000
 
 DB_URL = "mongodb+srv://katlegojdev:729e-shop@cluster0.ggcsumj.mongodb.net/"
-JWT_SECRET_KEY = "ddhfbiuer3cud8hd892bf872lknkaiudh9ddnuild9"
+JWT_SECRET_KEY = "2FxXT1NTf2K1Mo4i6AOvtdI"
 JWT_EXPIRES = 7d
 ACTIVATION_SECRET = hdjkndawnwe34buidsdasd
 SMPT_HOST = smtp.gmail.com
