--- a/backend/config/.env
+++ b/backend/config/.env
@@ -1,9 +1,8 @@
 PORT = 8000
-
-DB_URL = "mongodb+srv://katlegojdev:729e-shop@cluster0.ggcsumj.mongodb.net/"
+DB_URL = "mongodb+srv://katlegojdev:729e-shop@cluster0.ggcsumj.mongodb.net/test"
 JWT_SECRET_KEY = "2FxXT1NTf2K1Mo4i6AOvtdI"
 JWT_EXPIRES = 7d
-ACTIVATION_SECRET = hdjkndawnwe34buidsdasd
+ACTIVATION_SECRET = hdjkndawnwe34buidsdasnjie@vmvnsk345d
 SMPT_HOST = smtp.gmail.com
 SMPT_PORT = 465
 SMPT_PASSWORD = pcrjygrpzqehcpxb
