--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-lottie": "^1.2.3",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
     "react-toastify": "^9.1.3"
   },
