--- a/backend/config/.env
+++ b/backend/config/.env
@@ -1,5 +1,6 @@
 PORT = 8000
-DB_URL = "mongodb+srv://katlegojdev:729e-shop@cluster0.ggcsumj.mongodb.net/test"
+
+DB_URL = "mongodb+srv://eshop:729eshop@cluster0.ggcsumj.mongodb.net/?retryWrites=true&w=majority"
 JWT_SECRET_KEY = "2FxXT1NTf2K1Mo4i6AOvtdI"
 JWT_EXPIRES = 7d
 ACTIVATION_SECRET = hdjkndawnwe34buidsdasnjie@vmvnsk345d
